2024-05-18T00:55:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9136012815 # 282
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-18
* notice: last 14d: unq all: 5 17
* notice: prev accum: outdated-unq outdated-all / unq all: 904 1648 / 916 1664
* notice: next accum: outdated-unq outdated-all / unq all: 904 1648 / 916 1665
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-05-17]

2024-05-17T08:15:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9125119996 # 280
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-17
* notice: last 14d: unq all: 5 16
* notice: prev accum: outdated-unq outdated-all / unq all: 904 1648 / 915 1663
* notice: next accum: outdated-unq outdated-all / unq all: 904 1648 / 916 1664
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-17]

2024-05-17T00:55:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9121246153 # 279
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-17
* notice: last 14d: unq all: 5 15
* notice: prev accum: outdated-unq outdated-all / unq all: 904 1648 / 915 1662
* notice: next accum: outdated-unq outdated-all / unq all: 904 1648 / 915 1663
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-05-16]

2024-05-16T16:14:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9115690295 # 278