@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-18T00:55:01Z",
+  "timestamp" : "2024-05-18T08:13:52Z",
   "count_outdated" : 1648,
   "uniques_outdated" : 904,
-  "count" : 1665,
-  "uniques" : 916,
+  "count" : 1666,
+  "uniques" : 917,
   "clones" : [
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -82,6 +82,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
