@@ -1,6 +1,6 @@
 {
-  "count": 17,
-  "uniques": 5,
+  "count": 18,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -45,6 +45,11 @@
     {
       "timestamp": "2024-05-17T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-18T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
